<?xml version="1.0"?>
<package format="3">
  <name>imu_lidar_localization</name>
  <version>0.0.0</version>
  <description>Fusing IMU and LIDAR data using robot_localization</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
